--- a/Frontend/src/styles/Profile.css
+++ b/Frontend/src/styles/Profile.css
@@ -1,5 +1,6 @@
 /* Profile.css */
 .profile-container {
+  margin-top: 2px;
   font-family: 'Arial', sans-serif;
   padding: 20px;
   width: 1040px;
