--- a/Frontend/src/styles/Dashboard.css
+++ b/Frontend/src/styles/Dashboard.css
@@ -72,17 +72,19 @@
 
 /* Notes grid layout inside the Recent Notes section */
 .dashboard-notes-grid {
+
+  margin-top: 40px;
   display: flex;
   flex-direction: column; /* Stack notes vertically */
   gap: 5px; /* Smaller gap */
-  width: 100%;
+  width: 90%;
   padding: 5px;
 }
 
 /* Individual note card styling for Recent Notes */
 .dashboard-note-card {
   width: 100%;
-  height: 50px; /* Smaller height for the note cards */
+  height: 100px; /* Smaller height for the note cards */
   background-color: white;
   padding: 5px; /* Smaller padding */
   border-radius: 8px;
