--- a/Frontend/src/styles/Dashboard.css
+++ b/Frontend/src/styles/Dashboard.css
@@ -1,10 +1,11 @@
 /* Dashboard container styles */
 .dashboard-container {
+  
   margin-top: 2px;
   width: 100%;
   max-width: 1080px;
   font-family: 'Arial', sans-serif;
-  height: 100vh;
+  height: 1200px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
