--- a/Frontend/src/styles/Profile.css
+++ b/Frontend/src/styles/Profile.css
@@ -26,11 +26,21 @@
   border-radius: 5px;
 }
 
-.submit-button, .logout-button {
+.submit-button {
   width: 100%;
   padding: 10px;
   border: none;
   background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.plogout-button {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  background-color: #ff0000;
   color: white;
   font-size: 16px;
   cursor: pointer;
