--- a/Frontend/src/styles/Dashboard.css
+++ b/Frontend/src/styles/Dashboard.css
@@ -1,11 +1,10 @@
 /* Dashboard container styles */
 .dashboard-container {
-  
   margin-top: 2px;
   width: 100%;
   max-width: 1080px;
   font-family: 'Arial', sans-serif;
-  height: 1200px;
+  height: 1250px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -14,6 +13,7 @@
   flex-wrap: wrap;
   position: relative; /* Allow positioning inside */
   box-sizing: border-box;
+  margin-bottom: 30px;
 }
 
 /* Form container with responsive design */
@@ -27,12 +27,13 @@
   border-radius: 8px;
   text-align: center;
   max-width: 1020px;
+  margin-bottom: 20px;
 }
 
 /* Dashboard title style */
 .dashboard-title {
   font-size: 1.5rem; /* Slightly smaller */
-  margin-bottom: 10px;
+  margin-bottom: 40px;
   color: #333;
 }
 
@@ -47,10 +48,17 @@
 
 /* Individual section styling (small-box) */
 .dashboard-section {
-  padding: 10px;
+  position: relative; /* Nyt navigointinapit asemoituvat suhteessa tähän */
+  padding: 20px;
   border-radius: 8px;
-  background-color: #fff;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background: white;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.dashboard-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 /* Styling for small boxes */
@@ -73,7 +81,6 @@
 
 /* Notes grid layout inside the Recent Notes section */
 .dashboard-notes-grid {
-
   margin-top: 40px;
   display: flex;
   flex-direction: column; /* Stack notes vertically */
