--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -3,7 +3,7 @@ body {
   width: 100%;
   max-width: 1080px;
   margin: auto;
-  background: url("https://images.pexels.com/photos/129731/pexels-photo-129731.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background: url("https://img.freepik.com/free-vector/digital-technology-background-vector-with-hexagon-pattern-white-tone_53876-110878.jpg?t=st=1744715895~exp=1744719495~hmac=0a9fed5431e3628333d2b5ae6f4c4452476c6fbc1b8bb71c147c2c61c356fac0&w=996");
   background-repeat: repeat;
   background-position: center;
   background-size: auto;
